Updated event section for sub.html

--- a/sub.html
+++ b/sub.html
@@ -2783,6 +2783,63 @@
                 </div>
             </div>
         </div>
+        <!-- 이벤트 섹션 -->
+        <div class="sub_wrap" id="sub_event">
+                <div class="mid_LL">이벤트</div>
+                <div class="mid_LS hidden">이벤트</div>
+                <div class="mid_R">
+                    <div class="swiper_section">
+                        <div class="swiper_wrapper">
+                            <div class="swiper_item">
+                                <a href="#">
+                                    <img src="https://image.aladin.co.kr/img/bn/book/2023/01/m_230221_ruobini_p.jpg" alt="">
+                                </a>
+                                <div class="event_title">&lt;초거대 위협&gt; 스텐 트레이</div>
+                            </div>
+                            <div class="swiper_item">
+                                <a href="#">
+                                    <img src="https://image.aladin.co.kr/img/bn/book/2023/03/m_230828_musk2_p.jpg" alt="">
+                                </a>
+                                <div class="event_title">무선 충전패드(화성)</div>
+                            </div>
+                            <div class="swiper_item">
+                                <a href="#">
+                                    <img src="https://image.aladin.co.kr/img/bn/book/2023/03/m_230901_september_p.jpg" alt="">
+                                </a>
+                                <div class="event_title">9월 특별 선물. 보스턴백 · 보온보냉병 (이벤트 도서 포함, 국내서.외서 5만원 이상)</div>
+                            </div>
+                            <div class="swiper_item">
+                                <a href="#">
+                                    <img src="https://image.aladin.co.kr/img/bn/book/2023/02/m_230623_free_p.jpg" alt="">
+                                </a>
+                                <div class="event_title">책과 함께 무료배송 - 함께 사기 좋은 특가 도서 · 저가 도서 총집합</div>
+                            </div>
+                            <div class="swiper_item">
+                                <a href="#">
+                                    <img src="https://image.aladin.co.kr/img/bn/book/2021/01/m_210104_plus_p.jpg" alt="">
+                                </a>
+                                <div class="event_title">이 달의 적립금 혜택</div>
+                            </div>
+                            <div class="swiper_item">
+                                <a href="#">
+                                    <img src="이 달의 적립금 혜택" alt="">
+                                </a>
+                                <div class="event_title">모든 책 오늘 출고 서비스 오픈</div>
+                            </div>
+                            <div class="swiper_item">
+                                <a href="#">
+                                    <img src="https://image.aladin.co.kr/img/bn/book/2023/01/m_230216_goods_p.jpg" alt="">
+                                </a>
+                                <div class="event_title">함께 사면 무료배송. 1천원~4천원대  굿즈 총집합</div>
+                            </div>
+                            <div class="swiper_item">
+                                <a href="#">
+                                    <img src="https://image.aladin.co.kr/img/giftevents/book/img/160426_goods_m.jpg" alt="">
+                                </a>
+                                <div class="event_title">이 시간, 알라딘 사은품 총집합!</div>
+                            </div>
+                    </div>
+        </div>
         <!-- 푸터 시작 -->
         <footer>
             <div class="footer_menu">
