UPdate slick dots custom

--- a/sub.html
+++ b/sub.html
@@ -22,7 +22,7 @@
             type="text/javascript"
             src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
         ></script>
-        <script src="./js/Slick.js"></script>
+        <script src="./js/Slick_sub.js"></script>
         <script src="./js/SlideBundle.js"></script>
         <script src="./js/Hover.js"></script>
         <script src="./js/CloseBtn.js"></script>
@@ -2822,7 +2822,7 @@
                             </div>
                             <div class="swiper_item">
                                 <a href="#">
-                                    <img src="이 달의 적립금 혜택" alt="">
+                                    <img src="https://image.aladin.co.kr/img/bn/book/2023/01/m_230210_beready_p.jpg" alt="">
                                 </a>
                                 <div class="event_title">모든 책 오늘 출고 서비스 오픈</div>
                             </div>
