--- a/sub.html
+++ b/sub.html
@@ -4767,10 +4767,12 @@
         <div class="graph_wrap">
             <div class="sub_wrap">
                 <div class="graph_L">
-                    <div class="graph_titleL">구매자 분포</div>
-                    <div class="graph_titleS hidden">
-                        구매자 <br />
-                        분포
+                    <div class="graph_title">
+                        <div class="graph_titleL">구매자 분포</div>
+                        <div class="graph_titleS hidden">
+                            구매자 <br />
+                            분포
+                        </div>
                     </div>
                     <div class="graph_contents">
                         <div class="analysis">
@@ -4969,14 +4971,245 @@
                     </div>
                 </div>
                 <div class="graph_R">
-                    <div class="graph_titleL">평점 분포</div>
-                    <div class="graph_titleS hidden">
-                        평점 <br />
-                        분포
+                    <div class="graph_title">
+                        <div class="graph_titleL">평점 분포</div>
+                        <div class="graph_titleS hidden">
+                            평점 <br />
+                            분포
+                        </div>
+                    </div>
+                    <div class="analysis">
+                        <div class="analysis_box">
+                            <!-- 상단 평점 시작 -->
+                            <div class="star_list">
+                                <div class="star_box">
+                                    <div class="star">
+                                        <img
+                                            src="./img/icon_Lstar_on.png"
+                                        />
+                                        <img
+                                            src="./img/icon_Lstar_on.png"
+                                        />
+                                        <img
+                                            src="./img/icon_Lstar_on.png"
+                                        />
+                                        <img
+                                            src="./img/icon_Lstar_on.png"
+                                        />
+                                        <img
+                                            src="./img/icon_Lstar_on.png"
+                                        />
+                                    </div>
+                                    <div class="num">9.3</div>
+                                    <div class="clear"></div>
+                                </div>
+                            </div>
+                            <!--// 상단 평점 끝 --><!-- 테이블 -->
+                            <div class="star_list">
+                                <table
+                                    width="100%"
+                                    border="0"
+                                    cellspacing="0"
+                                    cellpadding="0"
+                                >
+                                    <!-- 영역 85%를 최대치로 -->
+                                    <tbody>
+                                        <tr>
+                                            <td class="tb_left">
+                                                <img
+                                                    src="./img/icon_star_on.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_on.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_on.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_on.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_on.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                            </td>
+                                            <td class="tb_right">
+                                                <div
+                                                    class="bar"
+                                                    id="bar_r_5"
+                                                    style="width: 63.2%"
+                                                >
+                                                    <img
+                                                        src="https://image.aladin.co.kr/img/shop/2018/analysis_bg1.png"
+                                                    />
+                                                </div>
+                                                <div class="per">75.7%</div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="tb_left">
+                                                <img
+                                                    src="./img/icon_star_on.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_on.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_on.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_on.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_on.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                            </td>
+                                            <td class="tb_right">
+                                                <div
+                                                    class="bar"
+                                                    id="bar_r_4"
+                                                    style="width: 13.5%"
+                                                >
+                                                    <img
+                                                        src="//image.aladin.co.kr/img/shop/2018/analysis_bg1.png"
+                                                    />
+                                                </div>
+                                                <div class="per">16.2%</div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="tb_left">
+                                                <img
+                                                    src="./img/icon_star_on.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_on.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_on.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_off.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_off.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                            </td>
+                                            <td class="tb_right">
+                                                <div
+                                                    class="bar"
+                                                    id="bar_r_3"
+                                                    style="width: 4.5%"
+                                                >
+                                                    <img
+                                                        src="//image.aladin.co.kr/img/shop/2018/analysis_bg1.png"
+                                                    />
+                                                </div>
+                                                <div class="per">5.4%</div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="tb_left">
+                                                <img
+                                                    src="./img/icon_star_on.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_on.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_off.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_off.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_off.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                            </td>
+                                            <td class="tb_right">
+                                                <div
+                                                    class="bar"
+                                                    id="bar_r_2"
+                                                    style="width: 2.3%"
+                                                >
+                                                    <img
+                                                        src="https://image.aladin.co.kr/img/shop/2018/analysis_bg1.png"
+                                                    />
+                                                </div>
+                                                <div class="per">2.7%</div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="tb_left">
+                                                <img
+                                                    src="./img/icon_star_on.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_off.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_off.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_off.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                                <img
+                                                    src="./img/icon_star_off.png"
+                                                    style="margin-bottom: -4px"
+                                                />
+                                            </td>
+                                            <td class="tb_right">
+                                                <div
+                                                    class="bar"
+                                                    id="bar_r_1"
+                                                    style="width: 0%"
+                                                >
+                                                    <img
+                                                        src="//image.aladin.co.kr/img/shop/2018/analysis_bg1.png"
+                                                    />
+                                                </div>
+                                                <div class="per">0%</div>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="clear"></div>
+        </div>
+        <div class="clear"></div>
+        <div class="temp_H50"></div>
+        <!-- 100자평 섹션 -->
+        <div class="sub_wrap">
+            <div class="mid_BlogLL">100자평</div>
+            <div class="mid_BlogLS hidden">100자평</div>
+            <div class="mid_R"></div>
         </div>
         <!-- 푸터 시작 -->
         <footer>
