--- a/sub.html
+++ b/sub.html
@@ -4984,21 +4984,11 @@
                             <div class="star_list">
                                 <div class="star_box">
                                     <div class="star">
-                                        <img
-                                            src="./img/icon_Lstar_on.png"
-                                        />
-                                        <img
-                                            src="./img/icon_Lstar_on.png"
-                                        />
-                                        <img
-                                            src="./img/icon_Lstar_on.png"
-                                        />
-                                        <img
-                                            src="./img/icon_Lstar_on.png"
-                                        />
-                                        <img
-                                            src="./img/icon_Lstar_on.png"
-                                        />
+                                        <img src="./img/icon_Lstar_on.png" />
+                                        <img src="./img/icon_Lstar_on.png" />
+                                        <img src="./img/icon_Lstar_on.png" />
+                                        <img src="./img/icon_Lstar_on.png" />
+                                        <img src="./img/icon_Lstar_on.png" />
                                     </div>
                                     <div class="num">9.3</div>
                                     <div class="clear"></div>
@@ -5209,7 +5199,57 @@
         <div class="sub_wrap">
             <div class="mid_BlogLL">100자평</div>
             <div class="mid_BlogLS hidden">100자평</div>
-            <div class="mid_R"></div>
+            <div class="mid_R">
+                <!-- 별점 -->
+                <div class="star_wrap">
+                    <a href="#">
+                        <img src="./img/icon_star_gray.png" alt="" />
+                        <img src="./img/icon_star_gray.png" alt="" />
+                        <img src="./img/icon_star_gray.png" alt="" />
+                        <img src="./img/icon_star_gray.png" alt="" />
+                        <img src="./img/icon_star_gray.png" alt="" />
+                    </a>
+                </div>
+                <div class="temp_H10"></div>
+                <!-- 글 남기기 input -->
+                <div class="hundred_box">
+                    <div class="Hleft1">
+                        <div class="text_box">
+                            <textarea
+                                id="txt_commentReview"
+                                name="tag_save"
+                                cols="87"
+                                rows="3"
+                                class="Btext_area watermark"
+                                style="resize: none"
+                            ></textarea>
+                            <div
+                                class="p_smfont npd_tgray"
+                                style="
+                                    text-align: right;
+                                    padding-top: 3px;
+                                    padding-right: 3px;
+                                    display: none;
+                                "
+                            >
+                                현재 <span id="cnt_commentReview">0</span> /
+                                280byte (한글 140자 이내)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="Hright1">
+                        <div class="btn_register">
+                            <a
+                                href="#"
+                                >등록</a
+                            >
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                <div class="temp_H10"></div>
+                <div class="temp_H30"></div>
+            </div>
         </div>
         <!-- 푸터 시작 -->
         <footer>
