Updated for right floating banner

--- a/sub.html
+++ b/sub.html
@@ -2018,6 +2018,25 @@
         </header>
         <div style="padding: 3px 0 2px 0"></div>
         <div class="sub_wrap">
+            <!-- 우측 상단 배너 -->
+            <div
+                class="goodsbn_wrap"
+            >
+                <div class="goodsbn_box">
+                    <a
+                        href="javascript:void(0);"
+                        ><img
+                            src="https://image.aladin.co.kr/img/bn/book/2023/03/230906_p_fl1.png"
+                    /></a>
+                    <div class="goodsbn_close">
+                        <a href="javascript:void(0);"
+                            ><img
+                                src="./img/goods_bn_close.png"
+                        /></a>
+                    </div>
+                </div>
+            </div>
+            <!-- 위로가기 스크롤 바 floating 배너 -->
             <button type="button" class="go_top btnScrollToTop">
                 위로가기
             </button>
@@ -5239,10 +5258,7 @@
                     </div>
                     <div class="Hright1">
                         <div class="btn_register">
-                            <a
-                                href="#"
-                                >등록</a
-                            >
+                            <a href="#">등록</a>
                         </div>
                     </div>
                     <div class="clear"></div>
