Updated for 100자평 section

--- a/sub.html
+++ b/sub.html
@@ -5229,6 +5229,7 @@
                         <img src="./img/icon_star_gray.png" alt="" />
                     </a>
                 </div>
+                <!-- 여백 -->
                 <div class="temp_H10"></div>
                 <!-- 글 남기기 input -->
                 <div class="hundred_box">
@@ -5263,7 +5264,11 @@
                     </div>
                     <div class="clear"></div>
                 </div>
+                <!-- 여백 -->
                 <div class="temp_H10"></div>
+                <!-- 리뷰 형태 선택, 스포일러, 글 작성 유의사항  -->
+                
+                <!-- 여백 -->
                 <div class="temp_H30"></div>
             </div>
         </div>
