--- a/sub.html
+++ b/sub.html
@@ -29,6 +29,7 @@
         <script src="./js/Menu.js"></script>
         <script src="./js/ContentsHover.js"></script>
         <script src="./js/LayerHover.js"></script>
+        <script src="./js//LayerClick.js"></script>
         <script src="./js/floatingBn.js"></script>
         <script src="./js/BookRotation.js"></script>
     </head>
@@ -5267,7 +5268,31 @@
                 <!-- 여백 -->
                 <div class="temp_H10"></div>
                 <!-- 리뷰 형태 선택, 스포일러, 글 작성 유의사항  -->
-                
+                <div class="hundred_box">
+                    <div class="Hleft2">
+                        <div class="myreview ">
+                            <div class="re_select" style="position:relative;">
+                                <span class="p_nonunder">카테고리</span>
+                                <img class="re_select-icon" src="./img/icon_arrow_down_L.png" align="absmiddle">
+                                    <div class="layer_list hidden" id="div_commentReviewCategory">
+                                        먼저 <span style="font-weight:bold; cursor:pointer;">로그인 </span>해주세요.
+                                    </div>
+                            </div>
+                            <div class="clear"></div>
+                        </div>
+                    </div>
+                    <div class="Hleft2" style="padding-top:10px;">
+                        <a href="#" class="grey9">
+                            <img id="imgSpoiler" src="./img/icon_check2_off.png" style="margin-bottom:-4px;">스포일러 포함 </a>
+                        <input type="checkbox" id="isspoiler" style="width:0;height:0;">
+                        <input type="hidden" id="allowspoiler" value="0">
+                    </div>
+                    <div class="Hright2" style="padding-top:10px;">
+                        <a href="#">글 작성 유의사항 <img src="./img/icon_arrow_down_L.png" style="margin-bottom:-2px;"></a>
+                        <div style="position: absolute; right:0; " class="np_popup"></div>
+                    </div>
+                    <div class="clear"></div>	
+                </div>
                 <!-- 여백 -->
                 <div class="temp_H30"></div>
             </div>
