Updated slick for sub.html

--- a/sub.html
+++ b/sub.html
@@ -17,6 +17,7 @@
             type="text/css"
             href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
         />
+
         <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.7.0.min.js"></script>
         <script
             type="text/javascript"
@@ -29,9 +30,10 @@
         <script src="./js/Menu.js"></script>
         <script src="./js/ContentsHover.js"></script>
         <script src="./js/LayerHover.js"></script>
-        <script src="./js//LayerClick.js"></script>
+        <script src="./js/LayerClick.js"></script>
         <script src="./js/floatingBn.js"></script>
         <script src="./js/BookRotation.js"></script>
+        <script src="./js/KakaoApi_sub.js"></script>
     </head>
     <body>
         <header>
@@ -6897,6 +6899,26 @@
                         /></a>
                     </div>
                 </div>
+            </div>
+            <div class="clear"></div>            
+            <div class="temp_H30"></div>            
+            <div id="last_bookwrap">
+                <div class="swiper_section">
+                    <div class="swiper_wrapper">
+                        <div class="swiper_item">
+                                <div class="cover">
+                                    <a href="#">
+                                        <img src="https://image.aladin.co.kr/product/32129/62/cover150/k112834309_1.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="title">
+                                    사람은 생각해는 대로 된다(양장)
+                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="white_circle_prev"></div>
+                <div class="white_circle_next"></div>
             </div>
             <div class="clear temp_H20"></div>
         </div>
