마지막 섹션 관련 도서 클릭 update

--- a/sub.html
+++ b/sub.html
@@ -6884,43 +6884,85 @@
         <div class="temp_line3"></div>
         <!-- 마지막 섹션 -->
         <div class="sub_wrap last_wrap">
-            <div class="last_Tbox">
-                <div class="last_title">
-                    이 상품을 구입하신 분들이 다음 상품도 구입하셨습니다.
-                </div>
-                <div class="last_more">
-                    <div class="btn_check">
-                        <a
-                            href="#"
-                            style="padding: 1px 8px 4px 11px"
-                            >더보기<img
-                                src="./img/icon_next_gray.png"
-                                style="margin-bottom: -3px"
-                        /></a>
+            <!-- 관련 도서 구입 -->
+            <div class="last_wrap-click">
+                <div class="last_Tbox">
+                    <div class="last_title">
+                        이 상품을 구입하신 분들이 다음 상품도 구입하셨습니다.
                     </div>
-                </div>
-            </div>
-            <div class="clear"></div>            
-            <div class="temp_H30"></div>            
-            <div id="last_bookwrap">
-                <div class="swiper_section">
-                    <div class="swiper_wrapper">
-                        <div class="swiper_item">
-                                <div class="cover">
-                                    <a href="#">
-                                        <img src="https://image.aladin.co.kr/product/32129/62/cover150/k112834309_1.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="title">
-                                    사람은 생각해는 대로 된다(양장)
-                                </div>
+                    <div class="last_more">
+                        <div class="btn_check">
+                            <a
+                                href="#"
+                                style="padding: 1px 8px 4px 11px"
+                                >더보기<img
+                                    src="./img/icon_next_gray.png"
+                                    style="margin-bottom: -3px"
+                            /></a>
                         </div>
                     </div>
                 </div>
-                <div class="white_circle_prev"></div>
-                <div class="white_circle_next"></div>
+                <div class="clear"></div>            
+                <div class="temp_H10"></div>            
+                <div id="last_bookwrap">
+                    <div class="swiper_section">
+                        <div class="swiper_wrapper">
+                            <div class="swiper_item">
+                                    <div class="cover">
+                                        <a href="#">
+                                            <img src="https://image.aladin.co.kr/product/32129/62/cover150/k112834309_1.jpg" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="title">
+                                        사람은 생각해는 대로 된다(양장)
+                                    </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="white_circle_prev"></div>
+                    <div class="white_circle_next"></div>
+                </div>
             </div>
-            <div class="clear temp_H20"></div>
+            <div class="clear temp_H60"></div>
+            <!-- 관련 도서 클릭 -->
+            <div class="last_wrap-buy">
+                <div class="last_Tbox">
+                    <div class="last_title">
+                        이 상품을 구입하신 분들이 다음 상품도 구입하셨습니다.
+                    </div>
+                    <div class="last_more">
+                        <div class="btn_check">
+                            <a
+                                href="#"
+                                style="padding: 1px 8px 4px 11px"
+                                >더보기<img
+                                    src="./img/icon_next_gray.png"
+                                    style="margin-bottom: -3px"
+                            /></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="clear"></div>            
+                <div class="temp_H10"></div>            
+                <div id="last_bookwrap">
+                    <div class="swiper_section">
+                        <div class="swiper_wrapper">
+                            <div class="swiper_item">
+                                    <div class="cover">
+                                        <a href="#">
+                                            <img src="https://image.aladin.co.kr/product/32129/62/cover150/k112834309_1.jpg" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="title">
+                                        사람은 생각해는 대로 된다(양장)
+                                    </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="white_circle_prev"></div>
+                    <div class="white_circle_next"></div>
+                </div>
+            </div>
         </div>
         <!-- 푸터 시작 -->
         <footer>
