updated for slick

--- a/sub.html
+++ b/sub.html
@@ -6963,6 +6963,7 @@
                     <div class="white_circle_next"></div>
                 </div>
             </div>
+            <div class="clear temp_H60"></div>
         </div>
         <!-- 푸터 시작 -->
         <footer>
