Updated for 오늘 본 도서 목록 리스트

--- a/sub.html
+++ b/sub.html
@@ -6892,9 +6892,7 @@
                     </div>
                     <div class="last_more">
                         <div class="btn_check">
-                            <a
-                                href="#"
-                                style="padding: 1px 8px 4px 11px"
+                            <a href="#" style="padding: 1px 8px 4px 11px"
                                 >더보기<img
                                     src="./img/icon_next_gray.png"
                                     style="margin-bottom: -3px"
@@ -6902,20 +6900,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="clear"></div>            
-                <div class="temp_H10"></div>            
+                <div class="clear"></div>
+                <div class="temp_H10"></div>
                 <div id="last_bookwrap">
                     <div class="swiper_section">
                         <div class="swiper_wrapper">
                             <div class="swiper_item">
-                                    <div class="cover">
-                                        <a href="#">
-                                            <img src="https://image.aladin.co.kr/product/32129/62/cover150/k112834309_1.jpg" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="title">
-                                        사람은 생각해는 대로 된다(양장)
-                                    </div>
+                                <div class="cover">
+                                    <a href="#">
+                                        <img
+                                            src="https://image.aladin.co.kr/product/32129/62/cover150/k112834309_1.jpg"
+                                            alt=""
+                                        />
+                                    </a>
+                                </div>
+                                <div class="title">
+                                    사람은 생각해는 대로 된다(양장)
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -6932,9 +6933,7 @@
                     </div>
                     <div class="last_more">
                         <div class="btn_check">
-                            <a
-                                href="#"
-                                style="padding: 1px 8px 4px 11px"
+                            <a href="#" style="padding: 1px 8px 4px 11px"
                                 >더보기<img
                                     src="./img/icon_next_gray.png"
                                     style="margin-bottom: -3px"
@@ -6942,20 +6941,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="clear"></div>            
-                <div class="temp_H10"></div>            
+                <div class="clear"></div>
+                <div class="temp_H10"></div>
                 <div id="last_bookwrap">
                     <div class="swiper_section">
                         <div class="swiper_wrapper">
                             <div class="swiper_item">
-                                    <div class="cover">
-                                        <a href="#">
-                                            <img src="https://image.aladin.co.kr/product/32129/62/cover150/k112834309_1.jpg" alt="">
-                                        </a>
-                                    </div>
-                                    <div class="title">
-                                        사람은 생각해는 대로 된다(양장)
-                                    </div>
+                                <div class="cover">
+                                    <a href="#">
+                                        <img
+                                            src="https://image.aladin.co.kr/product/32129/62/cover150/k112834309_1.jpg"
+                                            alt=""
+                                        />
+                                    </a>
+                                </div>
+                                <div class="title">
+                                    사람은 생각해는 대로 된다(양장)
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -6964,6 +6966,43 @@
                 </div>
             </div>
             <div class="clear temp_H60"></div>
+            <!-- 오늘 본 도서 리스트 -->
+            <div class="Lbook_Tbox">
+                <div class="today_click">
+                    <div class="today_click_L">
+                        <!-- 좁은 본문 도서 9개, 넓은 본문 12 -->
+                        <ul id="recentList">
+                            <li>
+                                <div class="fix_del" style="display: none">
+                                    <a href="javascript:void(0);" class="RecentDelete"
+                                        ><img
+                                            src="./img/btn_del.png"
+                                            alt=""
+                                            border="0"
+                                    /></a>
+                                </div>
+                                <div class="recentList_item">
+                                    <a
+                                        href="javascript:void(0);"
+                                        ><img
+                                            src="https://image.aladin.co.kr/product/29691/91/coversum/k232838587_1.jpg"
+                                            alt="싱크 어게인 (리커버 블랙 에디션)"
+                                            border="0"
+                                            class="fiximg1"
+                                        />
+                                    </a>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="today_click_r">
+                        <a href="/jiny/wrecent.aspx?type=Today"
+                            >오늘 본 상품<br />더보기</a
+                        >
+                    </div>
+                </div>
+                <div class="clear temp_H40"></div>
+            </div>
         </div>
         <!-- 푸터 시작 -->
         <footer>
