--- a/sub.html
+++ b/sub.html
@@ -2020,7 +2020,6 @@
             </div>
         </header>
         <div style="padding: 3px 0 2px 0"></div>
-        <div class="sub_wrap">
             <!-- 우측 상단 배너 -->
             <div class="goodsbn_wrap">
                 <div class="goodsbn_box">
@@ -2750,13 +2749,38 @@
             <div class="clear"></div>
         </div>
         <!-- 원서 번역서 섹션  -->
+        
+        
+
         <div class="sub_wrap">
             <div class="mid_R">
                 <div id="divForeignBookTitle">
                     <div class="mid_LL hidden">시리즈</div>
                 </div>
                 <div>
-                    <!-- 고정레이어 -->
+                    <!-- 상단 고정 레이어 -->
+                    <div class="fixed_top-wrap">
+                        <!-- 고정 레이어 타이틀 -->
+                        <div class="title">
+                            <ul>
+                                <li><a href="#" class="Ere_bo_title_ly">싱크 어게인 (리커버 블랙 에디션)</a> - 모르는 것을 아는 힘</li>
+                                <li>
+                                    <span class="font_sz17 font_pink font_str">17,820</span>원 (10%, 1,980원 할인)
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- 고정 레이어 버튼 -->
+                        <div class="btnbox">
+                            <div class="btn_cart floatL">
+                                <a href="#">장바구니 담기</a>
+                            </div>
+                            <div class="btn_buyitnow floatL">
+                                <a href="#">바로구매</a>
+                            </div>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                <div>
                     <div style="z-index: 99">
                         <div class="floatL font_sz16">
                             <strong>이 책의 원서/번역서</strong><br />
